--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -26,5 +26,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Run build script
-        run: ./myscript.sh
+        run: myscript.sh
         shell: bash
