--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -27,6 +27,6 @@ jobs:
     steps:
       - name: Run build script
         run: |
-          chmod +x ./myscript.sh
-           ./myscript.sh
+          chmod +x ./.github/script/myscript.sh
+           ./.github/script/myscript.sh
         shell: bash
