--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -25,5 +25,6 @@ jobs:
   jobs:  
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: Run build script
         run: ls
